@@ -3,6 +3,8 @@
 * Move the "begin" issue page to a button so it's optional
 * Change ordering of page titles to view real content on browser tabs
 * Add CocoaPods info to XCode projects - fixes issue:44
+* Add a permission denied page rather than always rendering a login screen
+* Hide projects in the menu and project list screen that the user does not have permission to view
 
 * Fix issue:64 where progressing an issue can appear to alter the time remaining incorrectly
 * Fix issue:62 - don't reset the platform in an xcode project unless the info file is being parsed
